--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 /*!
-	Theme Name: Brizy Starter Theme
-	Theme URI: https://github.com/ThemeFuse/Brizy-Starter-Theme
-	Description: The starter theme for Brizy plugin.
-	Author: Brizy
-	Author URI: https://www.brizy.io
-	Version: 1.0.1
-	Stable tag: 1.0.1
+	Theme Name: OneThird.Studio
+	Theme URI: https://onethird.studio
+	Description: OneThird Studio native starter theme. Which is a baseline for building the website with the easy to use page builder we provide within our offer. 
+	Author: Brizy & OneThird.studio
+	Author URI: https://onethird.studio
+	Version: 1.0.2
+	Stable tag: 1.0.2
 	Requires at least: 4.7
-	Tested up to: 5.2.2
+	Tested up to: 5.6
 	License: GNU General Public License v3 or later.
 	License URI: https://www.gnu.org/licenses/gpl-3.0.html
-	Text Domain: brizy-starter-theme
+	Text Domain: OneThird-Studio
 	Tags: custom-colors, custom-menu, custom-logo, featured-images, rtl-language-support, threaded-comments, translation-ready
 
     Use it to make something cool, have fun, and share what you've learned with others.
